[package]
name = "rpi-motion-wakeup"
description = "Power Raspberry Pi's display on/off using data from GPIO, like a motion sensor."
version = "0.1.0"
categories = ["hardware-support"]
keywords = ["raspberry_pi", "display"]
authors = ["Zach Grauerholz <zachary.grauerholz@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.12.0"
chrono = "0.4.11"
